# engineering-roadmap

./: .gitignore  .gitmodules  LICENSE  README.md  ROADMAP.md
.obsidian/: app.json  appearance.json  community-plugins.json  graph.json  hotkeys.json  note-composer.json  templates.json  workspace.json
.obsidian/plugins/copilot/: data.json
.obsidian/plugins/obsidian-git/: data.json
.obsidian/plugins/obsidian-icon-folder/: data.json
algorithms/searching/binary-search/: benchmark_test.go  (+5 more)
benchmarks/: README.md
benchmarks/memory/: array-vs-linked-list.md  array-with-built-in-copy.md
benchmarks/searching/: linear-vs-binary-search
books/: README.md
books/efficient-go/: chapter-01.md
computer-sience/algorithms/: README.md
cpp/: README.md
cpp/arrays/: CMakeLists.txt  array.hpp  main.cpp
docs/: README.md
docs/glossary/: B-tree.md  amortized-analysis.md  array.md  big-O.md  cache-line.md  cache-locality.md  cache-miss.md  capacity.md  cpu-prefetch.md  heap-memory.md  pointer-chasing.md  spatial-locality.md  stack-memory.md  temporal-locality.md
docs/interview/: arrays.md  complexity-analysis.md  dynamic-arrays-amortized-growth.md  memory-layout.md
docs/mistakes/: array vs link-list.md
docs/notes/: lesson-1.1-complexity-analysis.md  lesson-1.2-memory-layout.md  lesson-1.3-arrays.md
experiments/: README.md
experiments/senior-engineer-discussion/: preallocate-vs-non-allocate.md
go/: README.md
linux/: README.md
networking/: README.md
python/: README.md  test.py
python/arrays/: array.py
templates/: Glossary.md  Lesson.md  Projects.md
(+17 files in other folders)
